# final-project-ai

./: .gitignore  Makefile  README.md  end_to_end_pipeline.py  evaluate-test.py  fine-tuning.py  install.sh  main.py  pyproject.toml  quick.py  requirements.txt  run.py  run_config.py  run_factory.py  run_t5.py  run_with_encoder.py  setup.sh  simple_config.py  simple_trainer.py  test.py  test_encoder.py  test_full_pipeline.py  test_pipeline.py  vit_gpt2_training.py
chatbot/: chat.py  train.py  utils.py
configs/: default_config.yaml
examples/: decoder_config_examples.yaml  decoder_demo.py
src/: __init__.py  config.py  dataset.py  factories.py  metrics.py  trainer.py
src/data_loader/: __init__.py  data_utils.py  dataset.py
src/decoders/: __init__.py  base_decoder.py  base_decoder_fixed.py  decoder_factory.py  decoder_factory_fixed.py  gpt2_decoder.py  gpt2_decoder_fixed.py  llama_decoder.py  t5_decoder.py
src/encoders/: __init__.py  base_encoder.py  encoder_factory.py  resnet_encoder.py  swin_encoder.py  vit_encoder.py
src/models/: eva_vit.py  medblip_t5.py  medllm.py  vit_gpt2.py  vit_gpt2_deprecated.py
src/utils/: __init__.py  checkpointing.py  config.py  logging.py  seed_utils.py  text_processing.py  training_utils.py
