[project]
name = "final-project-ai"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "matplotlib>=3.4.0",
    "nltk>=3.7",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "peft>=0.17.1",
    "pillow>=8.3.0",
    "pyyaml>=6.0",
    "bitsandbytes; sys_platform == 'linux'",
    "accelerate",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "tqdm>=4.62.0",
    "transformers>=4.20.0",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "salesforce-lavis; sys_platform == 'linux'",
    "sentencepiece; sys_platform == 'linux'",
]
